tests/expectations/compiler/finalize/set_incorrect_type_fail.out
Error [ETYC0372117]: Expected type `test.aleo/Token` but type `u128` was found.
    --> compiler-test:18:32
     |
  18 |     Mapping::set(tokens, addr, amount);
     |                                ^^^^^^
Error [ETYC0372117]: Expected type `test.aleo/Token` but type `u128` was found.
    --> compiler-test:19:22
     |
  19 |     tokens.set(addr, amount);
     |                      ^^^^^^
Error [ETYC0372117]: Expected type `address` but type `u8` was found.
    --> compiler-test:20:27
     |
  20 |     Mapping::set(amounts, 1u8, amount);
     |                           ^^^
Error [ETYC0372117]: Expected type `address` but type `u8` was found.
    --> compiler-test:21:17
     |
  21 |     amounts.set(1u8, amount);
     |                 ^^^
Error [ETYC0372117]: Expected type `u128` but type `u8` was found.
    --> compiler-test:22:33
     |
  22 |     Mapping::set(amounts, addr, 1u8);
     |                                 ^^^
Error [ETYC0372117]: Expected type `u128` but type `u8` was found.
    --> compiler-test:23:23
     |
  23 |     amounts.set(addr, 1u8);
     |                       ^^^
Error [ETYC0372117]: Expected type `u128` but type `u8` was found.
    --> compiler-test:24:66
     |
  24 |     Mapping::set(tokens, addr, Token { owner_addr: addr, amount: 1u8 });
     |                                                                  ^^^
Error [ETYC0372117]: Expected type `u128` but type `u8` was found.
    --> compiler-test:25:56
     |
  25 |     tokens.set(addr, Token { owner_addr: addr, amount: 1u8 });
     |                                                        ^^^
